# cVK

./: .gitmodules  CMakeLists.txt  ChangeLog  Makefile.am  README  api_generator.c  cVK.c  cVK.h  cVKOAuth.c  configure.ac  http.c  http.h  oauth.c  setters.h  structrures.h
vk_api/: api_generator.c
